--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ const year = new Date().getFullYear();
 <footer class="paper padding-large text-center margin-top-large">
 
   <p class="paper">
-    © {year} PaperAstro. Built with Astro and styled using PaperCSS.
+    © {year} PaperAstro. Built with Astro and styled using PaperCSS. Forms in this template are powered by the 
+    <a href="https://fabform.io" target="_blank">form backend service</a> fabform.io.
   </p>
-
 
   <div class="social-links flex justify-center gap-small margin-top-large">
 
